Adding markup and pictures from template

--- a/index.html
+++ b/index.html
@@ -6,6 +6,112 @@
   <title>News Article</title>
 </head>
 <body>
+  <header>
+    <section class="sections">
+      <div class="section__button">
+        <span></span>
+      </div>
+      <!-- Add menu here -->
+      <h2>SECTIONS</h2>
+    </section>
+    <h2 class="center-h2">
+      Friday, February 24, 2017
+    </h2>
+    <section class="search">
+      <img src="img/search.png">
+      <h2>SEARCH</h2>
+    </section>
+    <section class="login">
+      <h2>LOGIN</h2>
+    </section>
+
+    <h1>The News</h1>
+    
+    <section class="topics">
+      <div class="topics__invisible-div"></div>
+      <!-- I'm adding this one for flexbox to work -->
+      <ul>
+        <li>World</li>
+        <li>Politics</li>
+        <li>Business</li>
+        <li>Opinion</li>
+        <li>Tech</li>
+        <li>Science</li>
+        <li>Health</li>
+        <li>Sports</li>
+        <li>Entertainment</li>
+        <li>Travel</li>
+        <li>More</li>
+      </ul>
+      <a href="#">
+        <img src="img/e-paper-img.png">
+        E-PAPER
+      </a>
+    </section>
+  </header>
   
+
+  <main>
+    <article class="main-content">
+      <img src="img/Content-img.png">
+      <h2 class="main-content__title"></h2>
+      <p></p>
+    </article>
+    <section class="top-stories">
+      <mark>TOP STORIES</mark>
+      <ul>
+        <li>
+          PM unveils Shiva statue in Coimbatore on Mahashivratri
+        </li>
+        <li class="border">
+          PM Modi: Kanpur train accident was a conspiracy
+        </li>
+        <li class="border">
+          ‘Sena, BJP have no option but to join hands again’
+        </li>
+        <li class="border">
+          Thousands bid adieu to martyred jawan in Kashmir
+        </li>
+        <li class="border">
+          Jayalalithaa’s niece Deepa floats political outfit
+        </li>
+        <li class="border">
+          ‘China made mistake of ignoring India’s talent’
+        </li>
+        <li>
+          Jayalalithaa’s niece Deepa floats political outfit
+        </li>
+      </ul>
+    </section>
+    <article class="quick-bites">
+      <section class="quick-bites__stocks">
+        <mark>QUICK BITES</mark>
+        <h3>
+          Stocks Sell Off, Gold Rises 
+          Ahead of Trump Speech: 
+          Markets Wrap
+        </h3>
+        <p>
+          Global stocks retreated, erasing gains for 
+          the week as a glum set of European corporate 
+          earnings compounded investor nervousness before a 
+          major speech from U.S. President Donald Trump. 
+          Gold extended its rally as the dollar edged lower.
+        </p>
+        <a href="#">
+          <span class="text">Next</span>
+          <span class="arrow-left"></span>
+        </a>
+      </section>
+      <h3 class="form-title">
+        Get the Quick Bites delivered to 
+        your inbox daily
+      </h3>
+      <form action="#">
+        <input type="email">
+        <input type="submit" value="Sigh up">
+      </form>
+    </article>
+  </main>
 </body>
 </html>
