Finished markup for a default version

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         internal politics.
       </p>
     </article>
+
     <section class="top-stories">
       <mark>TOP STORIES</mark>
       <ul>
@@ -94,11 +95,12 @@
         <li class="border">
           ‘China made mistake of ignoring India’s talent’
         </li>
-        <li>
+        <li class="border">
           Jayalalithaa’s niece Deepa floats political outfit
         </li>
       </ul>
     </section>
+    
     <article class="quick-bites">
       <section class="quick-bites__stocks">
         <mark>QUICK BITES</mark>
@@ -116,7 +118,7 @@
         </p>
         <a href="#">
           <span class="text">Next</span>
-          <span class="arrow-left"></span>
+          <span class="arrow-right"></span>
         </a>
       </section>
       <h3 class="form-title">
@@ -124,7 +126,7 @@
         your inbox daily
       </h3>
       <form action="#">
-        <input type="email">
+        <input type="email" placeholder="Enter your email">
         <input type="submit" value="Sigh up">
       </form>
     </article>
