Adding push notifications to page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>News Article</title>
+
   <link rel="stylesheet" href="dist/index.css">
+
+  <script src="app/js/app.js"></script>
 </head>
 <body>
   <header>
@@ -38,17 +41,60 @@
       <div class="topics__invisible-div"></div>
       <!-- I'm adding this one for flexbox to work -->
       <ul>
-        <li>World</li>
-        <li>Politics</li>
-        <li>Business</li>
-        <li>Opinion</li>
-        <li>Tech</li>
-        <li>Science</li>
-        <li>Health</li>
-        <li>Sports</li>
-        <li>Entertainment</li>
-        <li>Travel</li>
-        <li>More</li>
+        <li>
+          <a href="#">
+            World
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Politics
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Business
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Opinion
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Tech
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Science</li>
+          </a>
+        <li>
+          <a href="#">
+            Health
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Sports
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Entertainment
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Travel
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            More
+          </a>
+        </li>
       </ul>
       <a href="#">
         <img src="img/e-paper-img.png">
