--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <section class="header__top">
       <section class="sections">
         <div class="sections__button">
-          <span></span>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
-        <!-- Add menu here -->
         <h2>SECTIONS</h2>
       </section>
       <h2 class="center-h2">
@@ -31,6 +32,46 @@
           <h2>Log in</h2>
         </button>
       </section>
+    </section>
+
+    <section id="menu-wrapper" class="menu-wrapper-hidden">
+      <section class="menu">
+        <section class="menu__top">
+          <h2>SECTIONS</h2>
+          <div class="sections__button2">
+            <div></div>
+            <div></div>
+          </div>
+        </section>
+        <ul>
+          <li>
+            <a href="#">
+              Link 1
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Link 2
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Link 3
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Link 4
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Link 5
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="menu-wrapper__body-background"></section>
     </section>
 
     <h1>The News</h1>
