--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
         </li>
         <li>
           <a href="#">
-            Science</li>
+            Science
           </a>
+        </li>
         <li>
           <a href="#">
             Health
