Changing markup at the point of 767px width

--- a/index.html
+++ b/index.html
@@ -161,27 +161,43 @@
     </article>
 
     <section class="top-stories">
-      <mark>TOP STORIES</mark>
-      <ul>
-        <li>
+      <section class="top">
+        <mark>TOP STORIES</mark>
+        <span href="#" class="top__view">
+          View all
+        </span>
+      </section>
+      <ul id="top-stories__ul-first" style="display: block;">
+        <li class="li2"></li>
+        <li class="li2 border"></li>
+        <li class="li2 border"></li>
+        <li class="li2 border"></li>
+        <!-- Those last 3 li's have to stay -->
+        <!-- I tried removing them. It doesn't work otherwise -->
+        <li style="display: none;" class="li2 border"></li>
+        <li style="display: none;" class="li2 border"></li>
+        <li style="display: none;" class="li2 border"></li>
+      </ul>
+      <ul id="top-stories__ul-second" style="display: none;">
+        <li class="li">
           PM unveils Shiva statue in Coimbatore on Mahashivratri
         </li>
-        <li class="border">
+        <li class="li border">
           PM Modi: Kanpur train accident was a conspiracy
         </li>
-        <li class="border">
+        <li class="li border">
           ‘Sena, BJP have no option but to join hands again’
         </li>
-        <li class="border">
+        <li class="li border">
           Thousands bid adieu to martyred jawan in Kashmir
         </li>
-        <li class="border">
+        <li class="li border">
           Jayalalithaa’s niece Deepa floats political outfit
         </li>
-        <li class="border">
+        <li class="li border">
           ‘China made mistake of ignoring India’s talent’
         </li>
-        <li class="border">
+        <li class="li border">
           Jayalalithaa’s niece Deepa floats political outfit
         </li>
       </ul>
