Main page has been adapted to 600px width

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           View all
         </span>
       </section>
-      <ul id="top-stories__ul-first" style="display: block;">
+      <ul id="top-stories__ul-first">
         <li class="li2"></li>
         <li class="li2 border"></li>
         <li class="li2 border"></li>
@@ -178,7 +178,7 @@
         <li style="display: none;" class="li2 border"></li>
         <li style="display: none;" class="li2 border"></li>
       </ul>
-      <ul id="top-stories__ul-second" style="display: none;">
+      <ul id="top-stories__ul-second">
         <li class="li">
           PM unveils Shiva statue in Coimbatore on Mahashivratri
         </li>
